# base_auth_backend

./: .coveragerc  .env.example  .gitignore  Dockerfile  EMAIL_SETUP.md  README.md  SMTP_SETUP_INSTRUCTIONS.md  check_db.py  docker-compose.yml  env.example  makefile  oldScript.sql  pyproject.toml  requirements-dev.txt  requirements.txt  script_creacion.sql
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 0486523b3093_add_is_activate_to_company_user_simple.py  177d058d549e_create_views_user_company_roles_.py  28186d2b3882_ajustes_posteriores.py  31b015770dbc_create_permission_tables_role_.py  66c32d7a84dd_create_base_tables_app_user_company_.py  6b732f6dabcf_create_relationship_tables_company_user_.py  928a2787e159_make_company_id_nullable_in_invalidated_.py  a261655577d5_add_is_activate_to_company_user.py  add_is_verified_to_user.py  b6544a1c028a_merge_multiple_heads.py  decb2109c704_create_invalidated_tokens_table.py
app/api/: __init__.py  deps.py
app/api/v1/: __init__.py  admin.py  auth.py  company.py  role.py  user.py
app/core/: __init__.py  config.py  logging.py  security.py
app/db/: __init__.py  base.py  init_db.py  seeds.py  session.py
app/models/: __init__.py  base.py  company.py  company_user.py  invalidated_token.py  permission.py  role.py  role_permission.py  user.py  user_identity.py  user_role.py
app/schemas/: __init__.py  auth.py  base.py  company.py  permission.py  response.py  role.py  user.py
app/services/: __init__.py  auth_service.py  cleanup_service.py  company_service.py  email_service.py  role_service.py  security_service.py  user_service.py
db/: init.sql  scriptcreacion.sql  seed.sql
scripts/: check_db.py  cleanup_tokens.py  debug_config.py  insert_permissions.py  setup_dev.sh  verify_smtp_config.py
specs/: 00_contracts.md  01_setup.md
tests/: README.md  conftest.py
tests/fixtures/: api_fixtures.py  auth_fixtures.py  company_fixtures.py  db_fixtures.py  role_fixtures.py  user_fixtures.py
tests/integration/test_api/: __init__.py
tests/integration/test_database/: __init__.py
tests/unit/test_api/: __init__.py
tests/unit/test_models/: __init__.py
tests/unit/test_schemas/: __init__.py
tests/unit/test_utils/: __init__.py
